--- a/matte-web/ivy.xml
+++ b/matte-web/ivy.xml
@@ -14,20 +14,18 @@
 		
 		<!-- Logging -->
 		<dependency org="log4j" name="log4j" rev="1.2.17" conf="compile,runtime"/>
-		<dependency org="org.slf4j" name="slf4j-api" rev="1.7.10" conf="compile,runtime">
+		<dependency org="org.slf4j" name="slf4j-api" rev="1.7.24" conf="compile,runtime">
     		<artifact name="slf4j-api" type="jar" />
 		</dependency>
-		<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.7.10" conf="compile,runtime">
+		<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.7.24" conf="compile,runtime">
 		    <artifact name="slf4j-log4j12" type="jar" />
 		</dependency>
-		<dependency org="org.slf4j" name="jcl-over-slf4j" rev="1.7.10" conf="compile,runtime">
+		<dependency org="org.slf4j" name="jcl-over-slf4j" rev="1.7.24" conf="compile,runtime">
     		<artifact name="jcl-over-slf4j" type="jar" />
 		</dependency>
 		
 		<!-- Utilities -->
-		<dependency org="net.sf.ehcache" name="ehcache" rev="1.6.2">
-			<artifact name="ehcache"/>
-		</dependency>
+		<dependency org="net.sf.ehcache" name="ehcache" rev="1.7.2"/>
 		<dependency org="gnu-regexp" name="gnu-regexp" rev="1.1.4"/>
 		<dependency org="javax.activation" name="activation" rev="1.1.1" conf="compile,demo-tomcat"/>
 		<dependency org="cglib" name="cglib" rev="2.2.2"/>
@@ -42,7 +40,7 @@
 		</dependency>
 		<dependency org="commons-collections" name="commons-collections" rev="3.2.1" conf="compile,runtime"/>
 		<dependency org="commons-el" name="commons-el" rev="1.0" conf="compile,runtime"/>
-		<dependency org="commons-fileupload" name="commons-fileupload" rev="1.2.2" conf="compile,runtime"/>
+		<dependency org="commons-fileupload" name="commons-fileupload" rev="1.3.2" conf="compile,runtime"/>
 		<dependency org="commons-httpclient" name="commons-httpclient" rev="3.1" conf="compile">
 			<artifact name="commons-httpclient"/>
 		</dependency>
@@ -70,9 +68,9 @@
 		<dependency org="org.apache.ws.commons.schema" name="XmlSchema" rev="1.4.7" conf="compile,runtime"/>
 		
 		<!-- JSON -->
-		<dependency org="com.fasterxml.jackson.core" name="jackson-annotations" rev="2.4.3"/>
-		<dependency org="com.fasterxml.jackson.core" name="jackson-core" rev="2.4.3"/>
-		<dependency org="com.fasterxml.jackson.core" name="jackson-databind" rev="2.4.3"/>
+		<dependency org="com.fasterxml.jackson.core" name="jackson-annotations" rev="2.8.7"/>
+		<dependency org="com.fasterxml.jackson.core" name="jackson-core" rev="2.8.7"/>
+		<dependency org="com.fasterxml.jackson.core" name="jackson-databind" rev="2.8.7"/>
 		
 		<!-- Media support -->
 		<dependency org="batik" name="batik-parser" rev="1.6-1" conf="compile,runtime"/>
@@ -89,10 +87,10 @@
 		<dependency org="com.drewnoakes" name="metadata-extractor" rev="2.6.2" conf="runtime,test"/>
 		
 		<!-- Lucene -->
-		<dependency org="org.apache.lucene" name="lucene-core" rev="2.4.1" conf="compile,runtime">
+		<dependency org="org.apache.lucene" name="lucene-core" rev="2.9.4" conf="compile,runtime">
     		<artifact name="lucene-core" type="jar" />
 		</dependency>
-		<dependency org="org.apache.lucene" name="lucene-snowball" rev="2.4.1" conf="compile,runtime">
+		<dependency org="org.apache.lucene" name="lucene-snowball" rev="2.9.4" conf="compile,runtime">
 			<artifact name="lucene-snowball" type="jar" />
 		</dependency>
 		
@@ -110,11 +108,7 @@
 			<artifact name="derby"/>
 		</dependency>
 		<dependency org="mysql" name="mysql-connector-java" rev="5.1.18" conf="test,jdbc"/>
-		<dependency org="org.postgresql" name="postgresql" rev="9.4-1200-jdbc4" conf="test,jdbc">
-			<exclude org="com.github.dblock.waffle"/>
-			<exclude org="net.java.dev.jna"/>
-			<exclude org="org.slf4j"/>
-		</dependency>
+		<dependency org="org.postgresql" name="postgresql" rev="42.0.0.jre7" conf="test,jdbc"/>
 		
 		<!-- Services -->
 		<dependency org="opensymphony" name="quartz" rev="1.6.3" conf="compile,runtime">
@@ -122,25 +116,25 @@
 		</dependency>
 		
 		<!-- Spring -->
-		<dependency org="org.springframework" name="spring-aop" rev="3.2.12.RELEASE" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-aop" rev="3.2.17.RELEASE" conf="compile,runtime">
 			<artifact name="spring-aop"/>
 		</dependency>
-		<dependency org="org.springframework" name="spring-context" rev="3.2.12.RELEASE" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-context" rev="3.2.17.RELEASE" conf="compile,runtime">
 			<artifact name="spring-context"/>
 		</dependency>
-		<dependency org="org.springframework" name="spring-context-support" rev="3.2.12.RELEASE" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-context-support" rev="3.2.17.RELEASE" conf="compile,runtime">
 			<artifact name="spring-context-support"/>
 		</dependency>
-		<dependency org="org.springframework" name="spring-core" rev="3.2.12.RELEASE" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-core" rev="3.2.17.RELEASE" conf="compile,runtime">
 			<artifact name="spring-core"/>
 		</dependency>
-		<dependency org="org.springframework" name="spring-jdbc" rev="3.2.12.RELEASE" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-jdbc" rev="3.2.17.RELEASE" conf="compile,runtime">
 			<artifact name="spring-jdbc"/>
 		</dependency>
-		<dependency org="org.springframework" name="spring-orm" rev="3.2.12.RELEASE" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-orm" rev="3.2.17.RELEASE" conf="compile,runtime">
 			<artifact name="spring-orm"/>
 		</dependency>
-		<dependency org="org.springframework" name="spring-webmvc" rev="3.2.12.RELEASE" conf="compile,runtime">
+		<dependency org="org.springframework" name="spring-webmvc" rev="3.2.17.RELEASE" conf="compile,runtime">
 			<artifact name="spring-webmvc"/>
 		</dependency>
 		
@@ -200,6 +194,7 @@
 		<exclude org="commons-logging"/>
 		<exclude org="org.apache.geronimo.specs"/>
 		<exclude module="avalon-framework"/>
+		<exclude module="ehcache-terracotta"/>
 		<exclude module="jaxen"/>
 		<exclude module="jaxp-api"/>
 		<exclude module="jaxrpc-api"/>
